# casino_ur5_project

./: .gitignore  Linear_gripper.ino  README.md  launch_all.sh  requirements.txt
backend/: README.md  api.py  cli.py  db.py  main.py  players.db
brain/: setup.py
brain/brain/: brain_node.py
custom_interface/: CMakeLists.txt  package.xml
custom_interface/msg/: DiceResults.msg  Player.msg
custom_interface/srv/: GetPlayerBets.srv
cv_subscriber/: package.xml  setup.py
cv_subscriber/cv_subscriber/: dice_detector_node.py
end_effector_description/launch/: end_effector_only.launch.py
end_effector_description/rviz/: end_effector_only.rviz
end_effector_description/urdf/: end_effector.urdf.xacro  end_effector_withDriverSupport.xacro
end_effectore_code/: Linear_gripper.ino
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  Board.js  Board.jsx  CasinoDashboard.jsx  PlayerCard.js  PlayerCard.jsx  ui_bridge.js  ui_bridge_fake.js
gripper/gripper/: gripper_client.py
install/: local_setup.sh  setup.sh
install/cv_subscriber/lib/cv_subscriber/: dice_detector
install/cv_subscriber/share/cv_subscriber/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: launch_all.sh  launch_all_urdf.sh
log/: latest_build
manipulator/: package.xml  setup.py
manipulator/manipulator/: pick_action_server.py
moveit_path_planner/: package.xml
moveit_path_planner/src/: moveit_path_planning_server.cpp
perception_cv/: package.xml  setup.py
perception_cv/perception_cv/aruco_cv/: aruco_node.py
perception_cv/perception_cv/dice_cv/: dice_node.py
scripts/: camera.sh  realsense.sh
src/brain/: package.xml  setup.py
src/brain/brain/: README.md  aaa.py  brain_nocv_node.py  brain_node.py
src/brain/launch/: brain.launch.py
src/combined_launch/: package.xml  setup.py
src/combined_launch/launch/: system.launch.py
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/action/: Movement.action  PickObject.action
src/custom_interface/msg/: CupResult.msg  DiceResult.msg  Player.msg  PlayerBet.msg  Players.msg  RoundResult.msg
src/custom_interface/srv/: Cup.srv  GripperCmd.srv  ResetGripperCmd.srv  StartRound.srv
src/end_effector_description/: CMakeLists.txt  package.xml
src/end_effector_description/launch/: display.launch.py
src/end_effector_description/urdf/: end_effector_only.xacro
src/gripper/: package.xml  setup.py
src/gripper/gripper/: gripper_server.py  info.md
src/linear_gripper_visualiser/: CMakeLists.txt  package.xml
src/linear_gripper_visualiser/launch/: auxiliary.launch.py  display.launch.py  real.launch.py
src/linear_gripper_visualiser/meshes/: EndEffectorMountInsert.stl  gripperURDF.stl  gripperURDFV2.stl  gripper_finger.stl  gripper_rail_base.stl  servoHousingV3.stl
src/linear_gripper_visualiser/rviz/: config.rviz2.rviz  rviz.rviz  rvizFullDisp.rviz
src/linear_gripper_visualiser/urdf/: linear_gripper.urdf  linear_gripper.urdf.xacro  ur_with_gripper.urdf.xacro  ur_with_gripper.xacro
src/moveit_path_planner/: CMakeLists.txt  example_cmds.md  package.xml
src/moveit_path_planner/launch/: cartesian_move_fake.launch.py  cartesian_move_real.launch.py
src/moveit_path_planner/src/: cartesian_move_demo.cpp  moveit_path_planning_server.cpp
src/perception_cv/: package.xml  setup.cfg  setup.py
src/perception_cv/launch/: perception.launch.py
src/perception_cv/perception_cv/: __init__.py  camera_transform.md
src/perception_cv/perception_cv/aruco_cv/: README.md  aruco_detector_sim.py  aruco_node copy.py  aruco_node.py  readme.md
src/perception_cv/perception_cv/cup_cv/: cup_node.py
src/perception_cv/perception_cv/dice_cv/: README.md  dice_node.py
src/perception_cv/perception_cv/player_cv/: player_node.py
src/perception_cv/perception_cv/scripts/: fake_camera.py
src/ui_bridge/: README.md  package.xml  setup.cfg  setup.py
src/ui_bridge/ui_bridge/: backend_node.py
