<?xml version="1.0"?>
<package format="3">
  <name>brain</name>
  <version>0.0.0</version>
  <description>Brain package controlling game logic and orchestrating nodes.</description>
  <maintainer email="z5359327@ad.unsw.edu.au">mtrn</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>custom_interface</depend>
  <depend>perception_cv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
